infra/k8s/overlays/prod/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mkc
  labels:
    environment: prod
