infra/k8s/overlays/prod/production-resources-ai-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ai-service
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 3Gi
              cpu: "2"
