infra/k8s/overlays/prod/production-resources-ai-worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-worker
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ai-worker
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: "2"
