infra/k8s/overlays/prod/production-resources-client-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: client
          imagePullPolicy: Always
