infra/k8s/overlays/prod/production-resources-gateway-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: gateway
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 768Mi
              cpu: "1"
